--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
-/*   
-Theme Name:Rico v.4.0
-Theme URI: http://richardsweeney.com
-Description: New WP theme for myself!
-Author:Richard Sweeney
+/*
+Theme Name: CrossBorder theme
+Theme URI: http://orestad-linux.se
+Description: WP theme for Xbrdr
+Author: Richard Sweeney
 Author URI: http://richardsweeney.com/
-Version: 4.0
-Tags: Musician, design, development
+Version: 1.0
 */
